# storingUnicorns

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-06-15-sql-transactions-design.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: azure.rs  connector.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs  utils.rs
src/key_handlers/: connections.rs  editor.rs  filter.rs  global.rs  mod.rs  results.rs  tables.rs
src/models/: connection.rs
src/services/: app_state.rs  export_import.rs  mod.rs  query_tabs.rs  schema_service.rs  table_cache.rs
src/ui/: animations.rs  clickable.rs  help_bar.rs  layout.rs  mod.rs  splash.rs  sql_highlight.rs  widgets.rs
src/ui/modals/: edit_row.rs  export_import.rs  mod.rs  new_connection.rs  schema_dialog.rs
src/ui/panels/: common.rs  connections.rs  mod.rs  query_editor.rs  results.rs  status_bar.rs  tables.rs
tests/: test_app_state.rs  test_export_import.rs  test_query_tabs.rs  test_schema_service.rs  test_table_cache.rs
