[package]
name = "storingUnicorns"
version = "0.8.4"
edition = "2021"
description = "A terminal-based database client inspired by DataGrip"
license = "MIT"

[[bin]]
name = "storingUnicorns"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database connectors
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "mysql",
  "sqlite",
  "rust_decimal",
] }

# SQL Server connector
tiberius = { version = "0.12", default-features = false, features = [
  "tds73",
  "rustls",
  "rust_decimal",
] }

# Decimal support
rust_decimal = "1"
tokio-util = { version = "0.7", features = ["compat"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization (for config/saved connections)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
dirs = "5.0"

# Terminal effects
tachyonfx = "0.9"

# Azure AD authentication
azure_identity = "0.22"
azure_core = "0.22"

update-notifier = "0.1.9"
